[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/one_area.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 218.295, 127.043 )

[node name="Area1" type="Node"]
script = ExtResource( 3 )

[node name="camera_limit_position" type="Position2D" parent="."]
position = Vector2( -36.615, -210 )

[node name="AreaActivator" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaActivator"]
shape = SubResource( 1 )

[node name="Enemies" type="Node" parent="."]
[connection signal="area_entered" from="AreaActivator" to="." method="_on_AreaActivator_area_entered"]
